# us-elections-pipeline

./: .env  README.md  pyproject.toml  setup.cfg  setup.py
data/archived/: 2025_02_ScheduleA.csv
data/combined/: ScheduleA_20250222.csv
data/new/: 2025_02_ScheduleA.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/stg/: stg_schedulea.sql
virginia_elections_pipeline/: assets.py  dbt.py  definitions.py  project.py  schedule.py
