[project]
name = "virginia_elections_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "clickhouse-driver",
    "clickhouse-sqlalchemy",
    "sqlalchemy",
    "selenium",
    "bs4",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "virginia_elections_pipeline.definitions"
code_location_name = "virginia_elections_pipeline"

[tool.setuptools.packages.find]
exclude=["virginia_elections_pipeline_tests"]
